sisiya-client-checks (0.6.31-1) UNRELEASED; urgency=low

  * added entry to the data part of the SisIYA message to sisiya_load.pl
    client check for the new web UI
  * added entry to the data part of the SisIYA message to sisiya_isuptodate.pl
    client check for the new web UI
  * added entry to the data part of the SisIYA message
    to sisiya_hpasm_temperature.pl client check for the new web UI
  * added entry to the data part of the SisIYA message
    to sisiya_dmesg.pl client check for the new web UI

sisiya-client-checks (0.6.30-1) UNRELEASED; urgency=low

  * Initial release. (Closes: #XXXXXX)

 -- Erdal Mutlu <erdal@kubuntu2-sb.elan-prj.com>  Fri, 31 Jan 2014 11:08:28 +0200